Fixed overflow issues

--- a/src/app/blog/blog-feed/blog-feed.component.css
+++ b/src/app/blog/blog-feed/blog-feed.component.css
@@ -26,6 +26,6 @@ mat-card-header {
 .posts {
   height: 67vh;
   display: flex;
-  overflow-x: auto;
+  overflow-y: auto;
   flex-direction: column;
 }
